--- a/weeks/week-5.qmd
+++ b/weeks/week-5.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Week 5"
-subtitle: "Spark SQL/Dask"
+subtitle: "Spark SQL"
 editor: source
 draft: true
 ---
@@ -14,10 +14,11 @@ draft: true
 :::
 
 
-We shall spend most of the lecture on 
+- {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook08_webdata-III.ipynb" download>Jupyter notebook VII : JSON</a> 
+- {{< fa globe >}} [html: JSON](/core/notebooks/notebook08_webdata-III.html) 
 
-[Dask Tutorial](https://tutorial.dask.org)
-
+- {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook06_sparksql.ipynb" download>Jupyter notebook VI : Spark SQL</a> 
+- {{< fa globe >}} [html: Spark SQL](/core/notebooks/notebook06_sparksql.html) 
 
 
 
